--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
-
   },
   "type": "module",
   "keywords": [],
@@ -15,6 +14,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^6.6.2",
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3"
   }
 }
